--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</ul></li>
 			<li><ul>HTML + CSS 
 				<li><ol>Basics
-					<li><a href="./html_css/fun1.html">HTML Fundamentals</a></li>
+					<li><a href="./html_css/basic.html">HTML Fundamentals</a></li>
 					<li><a href="./html_css/sih2.html">Semantic and Intermediate HTML</a></li>
 					<li><a href="./html_css/css1.html">CSS Introduction</a></li>
 					<li><a href="./html_css/css2.html">CSS Display</a></li>
