add Mine Sweeper

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 					<li><a href="./html_css/css2.html">CSS Display</a></li>
 				</ol></li>
 			</ul></li>
-			<li><ul>JavaScript
-				
+			<li><ul>ntermediate JavaScript Part I
+				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
 			</ul></li>
 		</ol>
 	</div>
