fix links and made them relative

--- a/html_css/semantic.html
+++ b/html_css/semantic.html
@@ -7,9 +7,9 @@
 <body>
 	<header>
 		<p>Indside of the header - let's add a navbar with some essential links</p>
-		<a href="https://tochaim.github.io/rithm/">Home</a>
-		<a href="https://tochaim.github.io/rithm/about.html">About</a>
-		<a href="https://tochaim.github.io/rithm/contact.html">Contact</a>
+		<a href="../index.html">Home</a>
+		<a href="../about.html">About</a>
+		<a href="../contact.html">Contact</a>
 	</header>
 	<article>
 		<h1>Article 1 - 1995 was a pretty crazy year for prograamming languages!</h1>
