--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<li><ul>HTML + CSS 
 				<li><ol>Basics
 					<li><a href="./html_css/basic.html">HTML Fundamentals</a></li>
-					<li><a href="./html_css/sih2.html">Semantic and Intermediate HTML</a></li>
+					<li><a href="./html_css/semantic.html">Semantic and Intermediate HTML</a></li>
 					<li><a href="./html_css/css1.html">CSS Introduction</a></li>
 					<li><a href="./html_css/css2.html">CSS Display</a></li>
 				</ol></li>
