remove dead links add css part 2

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 				<li><ol>Basics
 					<li><a href="./html_css/basic.html">HTML Fundamentals</a></li>
 					<li><a href="./html_css/semantic.html">Semantic and Intermediate CSS</a></li>
-					<li><a href="./html_css/css1.html">CSS Introduction</a></li>
-					<li><a href="./html_css/css2.html">CSS Display</a></li>
+					<li><a href="./html_css/semantic2.html"></a>Semantic Part 2</li>
 					<li><a href="./html_css/animations.html">CSS Animations</a></li>
 				</ol></li>
 			</ul></li>
