fix typeos on main page, start work on Google emulation.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 				<li><ol>Basics
 					<li><a href="./html_css/basic.html">HTML Fundamentals</a></li>
 					<li><a href="./html_css/semantic.html">Semantic and Intermediate CSS</a></li>
-					<li><a href="./html_css/semantic2.html"></a>Semantic Part 2</li>
+					<li><a href="./html_css/semantic2.html">Semantic Part 2</a></li>
+					<li><a href="./html_css/cssbasics.html">Basics Exercise Google</a></li>
 					<li><a href="./html_css/animations.html">CSS Animations</a></li>
 				</ol></li>
 			</ul></li>
-			<li><ul>ntermediate JavaScript Part I
+			<li><ul>Intermediate JavaScript Part I
 				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
 			</ul></li>
 		</ol>
