better animations for the cuckoo clock

--- a/html_css/animations.html
+++ b/html_css/animations.html
@@ -15,7 +15,9 @@
 					<div id="right_eye" class="bird"></div>
 					<div id="top_beak" class="bird"></div>
 					<div id="bottom_beak" class="bird"></div>
-					<div id="message" class="bird"></div>
+					<div id="message" class="bird">
+						<p>Cuckoo</p>
+					</div>
 				</div>
 				<div id="left_wing" class="bird"></div>
 				<div id="body" class="bird"></div>
