--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				</ol></li>
 			</ul></li>
 			<li><ul>Intermediate JavaScript Part I
+				<li><a href="jquery/jquery.html">jQuery Exercises</a></li>
 				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
 			</ul></li>
 		</ol>
