finish js Iterators Exercises

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 				</ol></li>
 			</ul></li>
 			<li><ul>Intermediate JavaScript Part I
-				<li><a href="jquery/jquery.html">jQuery Exercises</a></li>
+				<li><a href="./javascript/iterators.html">Iterators Exercises</a></li>
+				<li><a href="./jquery/jquery.html">jQuery Exercises</a></li>
 				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
 			</ul></li>
 		</ol>
