--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 					<li><a href="./html_css/semantic.html">Semantic and Intermediate CSS</a></li>
 					<li><a href="./html_css/semantic2.html">Semantic Part 2</a></li>
 					<li><a href="./html_css/cssbasics.html">Basics Exercise Google</a></li>
+					<li><a href="./html_css/flex1.html">Layout Mock 1</a></li>
+					<li><a href="./html_css/flex2.html">Layout Mock 2</a></li>
 					<li><a href="./html_css/animations.html">CSS Animations</a></li>
 				</ol></li>
 			</ul></li>
