fix header and white space for flex1. finish flex2.

--- a/html_css/flex2.html
+++ b/html_css/flex2.html
@@ -4,25 +4,30 @@
 	<meta charset="UTF-8">
 	<title>Mock 2</title>
 	<style>
-		#container{
-			display: flex;
-			flex-direction: column;
+		body{
+			postion: absolute;
 
+			margin: 0px;
+		}
+		#bigbox{
 			position: absolute;
-			width: 100%;
-			height: 100%;
+
+			top 0px;
+			left 0px;
+			margin 0;
+
+			height: 98%;
+			width: 98%;
+			border: 4px solid black;
 		}
 		header{
 			display: flex;
 			flex-direction: row;
 			align-items: center;
 
-			border-top: 3px solid black;
-			border-right: 3px solid black;
-			border-left: 3px solid black;
-
 			width: 100%;
-			height: 4%;
+			height: 5%;
+			border-bottom: 4px solid black;
 
 			font-family: sans-serif;
 		}
@@ -31,81 +36,62 @@
 		}
 		main{
 			display: flex;
-			flex-direction: column;
+			flex-direction: row;
 			justify-content: space-around;
-			align-items: center;
+			align-content: space-around;
+			flex-flow: wrap row;
 
 			position: relative;
 
-			border: 4px solid black;
-
 			width: 100%;
 			height: 95%;
+			border: 1px dashed red;
+		}
+		.color{
+			display: flex;
+
+			width: 30%;
+			height: 87%;
+			border: 4px solid black;
+		}
+		.purple{
+			width: 96%;
+			height: 18%;
+
+			background-color: #8D7CC2; //purple
+
 		}
 		.row{
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			align-items: center;
-			
-			position: relative;
+			align-content: flex-start;
 
-			/* border: 1px dashed red; */
-			
-			width: 90%;
-			height: 17%;
-
+			width: 96%;
+			height: 75%;
 		}
 		.red{
-			border: 4px solid black;
-			
-			width: 23%;
-			height: 100%;
-
-
-			background-color: #EA989A;
+			background-color: #E06665; // red
 		}
-		.blue{
-			border: 4px solid black;
-
-			width: 70%;
-			height: 100%;
-
-
-			background-color: #A0C4F8;
+		.green{
+			background-color: #92C47D; // green 
 		}
-		.yellow{
-			border: 4px solid black;
-			width: 100%;
-			height: 90%;
-			margin: auto;
-
-			background-color: #FFE59A;
+		.orange{
+			background-color: #FE9900; // orange 
 		}
-
 	</style>
 </head>
 <body>
-	<div id="container">
+	<div id="bigbox">
 		<header><p>Mock 2</p></header>
 		<main>
+				<div class="purple color"></div>
 			<div class="row">
-				<div class="red"></div>
-				<div class="blue"></div>
-			</div>			
-			<div class="row">
-				<div class="red"></div>
-				<div class="blue"></div>
-			</div>			
-			<div class="row">
-				<div class="red"></div>
-				<div class="blue"></div>
-			</div>
-			<div class="row">
-				<footer class="yellow"></footer>
+				<div class="red color"></div>
+				<div class="green color"></div>
+				<div class="orange color"></div>
 			</div>
 		</main>
-		
 	</div>
 </body>
 </html>
