--- a/html_css/flex1.html
+++ b/html_css/flex1.html
@@ -9,20 +9,20 @@
 			flex-direction: column;
 
 			position: absolute;
-			width: 100%;
-			height: 100%;
+			width: 98%;
+			height: 98%;
+
+			border: 4px solid black;
 		}
 		header{
 			display: flex;
 			flex-direction: row;
 			align-items: center;
 
-			border-top: 3px solid black;
-			border-right: 3px solid black;
-			border-left: 3px solid black;
-
 			width: 100%;
 			height: 4%;
+
+			border-bottom: 4px solid black;
 
 			font-family: sans-serif;
 		}
@@ -37,8 +37,6 @@
 
 			position: relative;
 
-			border: 4px solid black;
-
 			width: 100%;
 			height: 95%;
 		}
@@ -46,21 +44,21 @@
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			align-items: center;
+			align-items: flex-end;
 			
 			position: relative;
 
 			/* border: 1px dashed red; */
 			
 			width: 90%;
-			height: 17%;
+			height: 24%;
 
 		}
 		.red{
 			border: 4px solid black;
 			
 			width: 23%;
-			height: 100%;
+			height: 70%;
 
 
 			background-color: #EA989A;
@@ -69,7 +67,7 @@
 			border: 4px solid black;
 
 			width: 70%;
-			height: 100%;
+			height: 70%;
 
 
 			background-color: #A0C4F8;
@@ -77,7 +75,7 @@
 		.yellow{
 			border: 4px solid black;
 			width: 100%;
-			height: 90%;
+			height: 60%;
 			margin: auto;
 
 			background-color: #FFE59A;
