add link for flex3

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<li><a href="./html_css/cssbasics.html">Basics Exercise Google</a></li>
 					<li><a href="./html_css/flex1.html">Layout Mock 1</a></li>
 					<li><a href="./html_css/flex2.html">Layout Mock 2</a></li>
+					<li><a href="./html_css/flex3.html">Layout Mock 3</a></li>
 					<li><a href="./html_css/animations.html">CSS Animations</a></li>
 				</ol></li>
 			</ul></li>
