--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<li><a href="./html_css/semantic.html">Semantic and Intermediate CSS</a></li>
 					<li><a href="./html_css/semantic2.html">Semantic Part 2</a></li>
 					<li><a href="./html_css/cssbasics.html">Basics Exercise Google</a></li>
+					<li><a href="./html_css/hallenge2.html">Challenge 2</a></li>
 					<li><a href="./html_css/flex1.html">Layout Mock 1</a></li>
 					<li><a href="./html_css/flex2.html">Layout Mock 2</a></li>
 					<li><a href="./html_css/flex3.html">Layout Mock 3</a></li>
@@ -29,8 +30,10 @@
 			</ul></li>
 			<li><ul>Intermediate JavaScript Part I
 				<li><a href="./javascript/iterators.html">Iterators Exercises</a></li>
+				<li><a href="./javascript/dom.html">DOM</a></li>
 				<li><a href="./jquery/jquery.html">jQuery Exercises</a></li>
 				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
+
 			</ul></li>
 		</ol>
 	</div>
