try again on explosion

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li><ul>Intermediate JavaScript Part I
 				<li><a href="./javascript/iterators.html">Iterators Exercises</a></li>
 				<li><a href="./javascript/dom.html">DOM</a></li>
+				<li><a href="./javascript/high.js">Higher Order Functions, Timers, and Closures Exercises.</a></li>
 				<li><a href="./jquery/jquery.html">jQuery Exercises</a></li>
 				<li><a href="https://tochaim.github.io/minesweeper/">Mine Sweeper</a></li>
 
