--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<li><a href="./html_css/semantic2.html">Semantic Part 2</a></li>
 					<li><a href="./html_css/cssbasics.html">Basics Exercise Google</a></li>
 					<li><a href="./html_css/hallenge2.html">Challenge 2</a></li>
+					<li><a href="./html_css/responsive.html">Responsive</a></li>
 					<li><a href="./html_css/flex1.html">Layout Mock 1</a></li>
 					<li><a href="./html_css/flex2.html">Layout Mock 2</a></li>
 					<li><a href="./html_css/flex3.html">Layout Mock 3</a></li>
